All Blog posts now displaying. Added Events components.

--- a/client/public/blogposts/ramblings_003.html
+++ b/client/public/blogposts/ramblings_003.html
@@ -1,17 +1,3 @@
 <div>
-<h2>Lament of a 20th-century composer</h2>
-<div>
-    If this document is preserved in any way after I croak, it will sound like the bluster of an
-    anachronistic composer/critic, the likes of Cherubini, ranting about a performance of the latest
-    Beethoven string quartet heard in or around 1825.
-    But I would hope a small number of people reading this know what a string quartet is, or have
-    even dug their nose into one of the likes of Haydn, Beethoven, Brahms, Schoenberg, Bartok,
-    Shostakovich, Ligeti et al. Maybe even Cage, Feldman, Lutaslawski. The list goes on.
-    But does it really?
-    This page is not specifically about the genre of the String Quartet, which has a long and
-    well-documented history, but more about the love of notes. No-- not the pieces of paper you passed
-    behind you in chemistry class about who was ****ing who, but relations between pitch frequencies,
-    which, at some . 'Notes' is an expression 
-</div>
-
+    This is a Blog post about my music. It's just a placeholder so illustrate my how I can show entries on my blog.
 </div>
